--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@
     max-width: 1200px;
 }
 
-.grid-container {
+.grid-container *{
     box-sizing: border-box;
-    font-family: fantasy;
 }
 
 .row:before,
@@ -52,7 +51,22 @@ h1 {
     border: 2px solid black;
 }
 nav{
-  list-style: none;
+  width:50%;
+  position:fixed;
+  top:0;
+  left:25%;
+  margin-bottom: 0;
+}
+nav a{
+  text-decoration:none;
+  font-size:18px;
+  color:black;
+}
+
+ul{
+  list-style-type: none;
+}
+nav ul li{
   display:inline;
   padding:10px;
 }
