--- a/style.css
+++ b/style.css
@@ -51,11 +51,14 @@ h1 {
     border: 2px solid black;
 }
 nav{
-  width:50%;
+  box-sizing: border-box;
+  width:75%;
   position:fixed;
   top:0;
-  left:25%;
+  left:15%;
   margin-bottom: 0;
+  height:50px;
+  text-align: center;
 }
 nav a{
   text-decoration:none;
@@ -68,5 +71,9 @@ ul{
 }
 nav ul li{
   display:inline;
-  padding:10px;
+  padding: 10px 15% 10px 0;
+}
+#main{
+  margin-top: 60px;
+  text-align:center;
 }
