--- a/style.css
+++ b/style.css
@@ -60,8 +60,7 @@ nav{
   width:100%;
   position:fixed;
   top:0;
-  margin: 0;
-  height:10%;
+  text-align: center;
   background-color: #74AFAD;
   border-radius:0 0 2% 2%;
   font-family: "Josefin Sans";
@@ -76,15 +75,15 @@ nav ul a{
 ul{
   list-style-type: none;
   box-sizing: border-box;
-  padding-top: 5%;
+  padding-top: 10px;
 }
 nav ul li{
   display:inline;
   box-sizing: border-box;
-  padding: 20px 2.5% 10px 2.5%;
+  padding: 10px 2.5% 10px 2.5%;
 }
 #main{
-  margin-top: 20%;
+  margin-top: 150px;
   text-align:center;
 }
 
