--- a/style.css
+++ b/style.css
@@ -41,14 +41,12 @@ h1 {
 
 
 [class*='col-'] > p {
-    background-color: red;
-    padding: 0;
+    padding: 25px;
+    font-size: 20px;
     margin: 0;
-    text-align: center;
-    color: white;
-    border-radius: 15px;
+    text-align: justify;
+    color: black;
     min-height: 150px;
-    border: 2px solid black;
 }
 nav{
   box-sizing: border-box;
@@ -132,4 +130,16 @@ nav ul li{
     position:relative;
     left: 80px;
     top: 80px;
+}
+
+.profImg {
+    display: block;
+    margin: auto;
+}
+
+.profText {
+    font-family: "Josefin sans", sans-serif;
+    background-color: #bababa;
+    border-radius: 10px;
+    padding: 15px 15px 15px 15px;
 }
