added background color, text to index

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ html,body,a{
   font-family: "Josefin Sans"
 }
 
+body{
+    background-color: #c7dfde;
+}
+
 .grid-container {
     width: 100%;
     max-width: 1200px;
