--- a/contact.css
+++ b/contact.css
@@ -37,6 +37,7 @@ td {
 option {
     border: 0;
     font-family:"Josefin Sans";
+    background-color: #c7dfde;
 }
 #dropdown {
     width:266px;
@@ -48,7 +49,7 @@ option {
     -o-appearance: none;
     -ms-appearance: none;
     border-radius: 0;
-    background: url(assets/arrow.png) no-repeat #c7dfde;
+    background: url(http://fourloops.github.io/FourLoopsBlog/assets/arrow.png) no-repeat #c7dfde;
     background-position: right 10px center;
 }
 select {
@@ -64,17 +65,20 @@ select {
 ::-moz-placeholder {
     font-family: "Josefin Sans";
     color:    #000000;
-    font-size: 16px;
+    font-size:16px;
+    line-height: 24px;
 }
 ::-o-placeholder {
     font-family: "Josefin Sans";
     color:    #000000;
-    font-size: 16px;
+    font-size:16px;
+    line-height: 24px;
 }
 ::-ms-placeholder {
     font-family: "Josefin Sans";
     color:    #000000;
-    font-size: 16px;
+    font-size:16px;
+    line-height: 24px;
 }
 button {
     font-size:20px;
