--- a/style.css
+++ b/style.css
@@ -127,22 +127,26 @@ nav ul li {
 }
 .pic-left1 {
     float: right;
-    background: url(assets/panda.jpg) no-repeat;
+    background: url(assets/tom.jpg) no-repeat;
+    background-size: contain;
 }
 
 .pic-right2 {
     float: left;
-    background: url(assets/panda.jpg) no-repeat;
+    background: url(assets/owen.jpg) no-repeat;
+    background-size: contain;
 }
 
 .pic-left3 {
     float: right;
-    background: url(assets/panda.jpg) no-repeat;
+    background: url(assets/franz.jpg) no-repeat;
+    background-size: contain;
 }
 
 .pic-right4 {
     float: left;
-    background: url(assets/panda.jpg) no-repeat;
+    background: url(assets/sam.jpeg) no-repeat;
+    background-size: contain;
 }
 
 .pic-left5 {
@@ -229,7 +233,13 @@ nav ul li {
 .names {
     position:relative;
     left: 80px;
-    top: 80px;
+    top: 100px;
+}
+
+.fournames {
+    position:relative;
+    left: 60px;
+    top: 100px;
 }
 
 .month {
@@ -241,6 +251,9 @@ nav ul li {
 .profImg {
     display: block;
     margin: auto;
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
 }
 
 .profText {
