--- a/contact.css
+++ b/contact.css
@@ -80,9 +80,30 @@ select {
     font-size:16px;
     line-height: 24px;
 }
-button {
+input {
     font-size:20px;
     padding: 5px 20px 5px 20px;
     background-color: #c7dfde;
     border-radius: 10%;
+}
+#cover {
+    position: fixed;
+    visibility: hidden;
+    top: 120px;
+    width: 100%;
+    height: 100%;
+    text-align:center;
+    background-color: #c7dfde;
+}
+#cover.completed {
+    position: fixed;
+    visibility: visible;
+    top: 120px;
+    width: 100%;
+    height: 100%;
+    text-align:center;
+    background-color: #c7dfde;
+}
+#cover a{
+    font-size: 20px;
 }
