centered format update

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body{
     min-height: 1px;
     width: 25%;
     padding: 20px;
+    margin: 0 auto;
 
 }
 
@@ -100,13 +101,17 @@ nav ul li {
     margin:50px 0 40px 0;
 }
 #recentpost {
-    margin:50px 0 0 0;
-    left:25%;
-    text-align:left;
+    margin:50px auto 0 auto;
+    width: 50%;
+    text-align: justify;
+
+
 }
 #recentpost h2 {
     font-size:24px;
     font-weight: bold;
+    text-align:left;
+
 }
 #gotoarchive {
     margin:-100px 0 -100px 0;
@@ -266,6 +271,7 @@ nav ul li {
     background-color: #E3EFEE;
     border-radius: 10px;
     padding: 15px 15px 15px 15px;
+
 }
 
 .contacts img:hover {
@@ -319,4 +325,8 @@ nav ul li {
 #founders {
     border-radius: 10px;
     -webkit-filter: grayscale(1);
+}
+
+td {
+    padding: 2vw;
 }
