--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body{
     max-width: 1200px;
 }
 
+table *{
+    box-sizing: border-box;
+}
+
 .grid-container *{
     box-sizing: border-box;
 }
@@ -271,7 +275,7 @@ nav ul li {
     background-color: #E3EFEE;
     border-radius: 10px;
     padding: 15px 15px 15px 15px;
-
+    font-size: 1.3em;
 }
 
 .contacts img:hover {
