--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*------ Global properties & the column grid system ------*/
+
 html,body,a{
   margin:0;
   padding:0;
@@ -37,10 +39,6 @@ table *{
 
 }
 
-h1 {
-  max-width:  50%;
-}
-
 .col-1 {
     width: 25%;
 }
@@ -63,6 +61,13 @@ h1 {
     color: black;
     min-height: 150px;
 }
+
+
+h1 {
+  max-width:  50%;
+}
+
+/*------ Nav Bar ------*/
 a {
     text-decoration:none;
     color: black;
@@ -92,6 +97,9 @@ nav ul li {
     box-sizing: border-box;
     padding: 10px 2.5% 10px 2.5%;
 }
+
+/*------General page structure-------*/
+
 #main {
     margin-top: 120px;
     text-align:center;
@@ -126,6 +134,8 @@ nav ul li {
     font-size:20px;
     color: #af7476;
 }
+
+/*------ Picture classes for profiles and archive navigation ------*/
 
 [class*='pic-'] {
     display: block;
@@ -260,6 +270,8 @@ nav ul li {
     left:20px;
     top:100px;
 }
+
+/*------ Profile pages & social media thumbnails ------*/
 
 .profImg {
     display: block;
