--- a/style.css
+++ b/style.css
@@ -295,9 +295,38 @@ nav ul li {
 }
 
 .contacts img {
-  width: 36px;
+  width: 4vw;
   opacity: 0.7;
-  border-radius: 25px;
+  border-radius: 50%;
+}
+
+#twitter {
+    width: 5vw;
+    position: relative;
+    right: 5px;
+}
+
+@media only screen and (max-device-width: 768px) {
+
+    .contacts img {
+      width: 14vw;
+      opacity: 0.7;
+      border-radius: 50%;
+    }
+
+    #twitter {
+        width: 15vw;
+        position: relative;
+        right: 4px;
+    }
+
+    .contacts ul{
+      position: fixed;
+      bottom: 100px;
+      right: 0px;
+      -webkit-filter: grayscale(1);
+      padding: 0px 10px 0px 0px;
+    }
 }
 
 .contacts li{
@@ -318,11 +347,7 @@ nav ul li {
   padding: 0px 10px 0px 0px;
 }
 
-#twitter {
-    width: 43px;
-    position: relative;
-    right: 4px;
-}
+
 
 #sunset {
     border-radius: 10px;
