--- a/style.css
+++ b/style.css
@@ -110,7 +110,9 @@ nav ul li {
 }
 
 #img-main {
-    margin:50px 0 40px 0;
+    margin:50px auto 40px auto;
+    width: 50%;
+
 }
 #recentpost {
     margin:50px auto 0 auto;
@@ -327,6 +329,16 @@ nav ul li {
       -webkit-filter: grayscale(1);
       padding: 0px 10px 0px 0px;
     }
+    #recentpost {
+        width: 75%;
+    }
+    .profText {
+        font-size: 3em;
+    }
+    #img-main {
+        width: 75%;
+    }
+
 }
 
 .contacts li{
