--- a/style.css
+++ b/style.css
@@ -111,8 +111,11 @@ nav ul li {
 
 #img-main {
     margin:50px auto 40px auto;
-    width: 50%;
+    max-width: 50%;
 
+}
+#founders {
+    max-width: 100%;
 }
 #recentpost {
     margin:50px auto 0 auto;
@@ -335,8 +338,8 @@ nav ul li {
     .profText {
         font-size: 3em;
     }
-    #img-main {
-        width: 75%;
+    #founders {
+        max-width: 100%;
     }
 
 }
