--- a/contact.css
+++ b/contact.css
@@ -92,18 +92,15 @@ input.submit {
     visibility: hidden;
     top: 120px;
     width: 100%;
-    height: 100%;
+    height: 150%;
     text-align:center;
     background-color: #c7dfde;
 }
 #cover.completed {
-    position: fixed;
     visibility: visible;
-    top: 120px;
-    width: 100%;
-    height: 100%;
-    text-align:center;
-    background-color: #c7dfde;
+}
+form.completed {
+    visibility: hidden;
 }
 #cover a{
     font-size: 20px;
